syntax ="proto3";
package basic;
option go_package = "proto/basic";
import "google/protobuf/empty.proto";
import "proto/dbmodel/dbmodel.proto";
import "proto/dbmodel/model.proto";
service BasicSrv{
  rpc Login(LoginReq)returns(LoginResp){} //登录
  rpc Registry(RegistryReq)returns(dbmodel.Id){} //注册
  rpc ChangePassword(ChangePasswordReq)returns(dbmodel.Id){}//修改密码
  rpc UserInfoList(UserInfoListReq)returns(dbmodel.PageResp){}//分页查询用户
  rpc EditUser(dbmodel.SysUser)returns(dbmodel.Id){}//编辑用户
  rpc UserById(dbmodel.Id)returns(dbmodel.SysUser){}//查询用户

  rpc EditRole(dbmodel.SysRole)returns(dbmodel.Id){}//编辑角色
  rpc DelRole(dbmodel.Id)returns(dbmodel.Id){}
  rpc RoleList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc RoleById(dbmodel.Id)returns(dbmodel.SysRole){}//查询
  rpc RoleTree(google.protobuf.Empty)returns(dbmodel.TreeResp){}


  rpc EditUserGroup(dbmodel.SysGroup)returns(dbmodel.Id){}//编辑用户组
  rpc DelUserGroup(dbmodel.Id)returns(dbmodel.Id){}
  rpc UserGroupList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc UserGroupById(dbmodel.Id)returns(dbmodel.SysGroup){}//查询

  rpc EditMenu(dbmodel.SysMenu)returns(dbmodel.Id){}//编辑菜单
  rpc DelMenu(dbmodel.Id)returns(dbmodel.Id){}
  rpc MenuList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc MenuTree(google.protobuf.Empty)returns(dbmodel.TreeResp){}

  
  rpc EditArea(dbmodel.SysArea)returns(dbmodel.Id){}//编辑地址
  rpc DelArea(dbmodel.Id)returns(dbmodel.Id){}
  rpc AreaList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc AreaTree(google.protobuf.Empty)returns(dbmodel.TreeResp){}
  rpc AreaById(dbmodel.Id)returns(dbmodel.SysArea){}

  
  rpc MenuListByUser(dbmodel.SysUser)returns(dbmodel.OnlyMenu){}

  rpc MenuById(dbmodel.Id)returns(dbmodel.SysMenu){}

  rpc EditApi(dbmodel.SysApi)returns(dbmodel.Id){}//编辑SysApi
  rpc DelApi(dbmodel.Id)returns(dbmodel.Id){}
  rpc ApiList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc ApiById(dbmodel.Id)returns(dbmodel.SysApi){}
  rpc ApiListByUser(dbmodel.SysUser)returns(dbmodel.OnlyApi){}

  rpc EditSrv(dbmodel.SysSrv)returns(dbmodel.Id){}//编辑服务
  rpc DelSrv(dbmodel.Id)returns(dbmodel.Id){}
  rpc SrvList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc SrvById(dbmodel.Id)returns(dbmodel.SysSrv){}
  rpc SrvListByUser(dbmodel.SysUser)returns(dbmodel.OnlySrv){}

  rpc EditTree(dbmodel.SysTree)returns(dbmodel.Id){}//编辑树
  rpc DelTree(dbmodel.Id)returns(dbmodel.Id){}
  rpc TreeList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc TreeById(dbmodel.Id)returns(dbmodel.SysTree){}
  rpc TreeTree(google.protobuf.Empty)returns(dbmodel.TreeResp){}
  rpc TreeByType (TreeType) returns (dbmodel.TreeResp);
  
  rpc EditShop (dbmodel.SysShop) returns (dbmodel.Id);
  rpc DelShop(dbmodel.Id)returns(dbmodel.Id){}
  rpc ShopList(dbmodel.PageReq)returns(dbmodel.PageResp){}
  rpc ShopById(dbmodel.Id)returns(dbmodel.SysShop){}

  rpc EditQualifications (dbmodel.Qualification) returns (dbmodel.Id);
  rpc DelQualifications(dbmodel.Id)returns(dbmodel.Id){}
  
}
message TreeType {
  dbmodel.TreeType tree_type=1;
}

//用户登录
message LoginReq{
  dbmodel.LoginType login_type=1;
  string  user_name_or_phone_or_email=2;//用户名
  string user_password_or_code=3;//密码
}
//用户登录返回
message LoginResp{
  TokenResp token=1;//token
  dbmodel.SysUser user=2;//用户名
}
message TokenResp{
  string token=1;//token
  int64 expired=2;//过期时间
}
//用户注册请求
message RegistryReq{
  // dbmodel.UserType user_type=6;//用户类型（注册通道）
  string user_name=1;//用户名
  string user_password=2;//密码
  string user_password_again=3;//确认密码
  string user_phone=4;//电话
  string user_phone_code=5;//验证码
}
//修改密码
message ChangePasswordReq{
  int64 id=1;
  string user_password=2;//密码
  string user_password_again=3;//确认密码
}

message UserInfoListReq{
  dbmodel.PageReq page_req=1;
  string user_name=3;//用户名(查询条件)
  string user_phone=4;//电话(查询条件)
  string user_email=5;//邮箱(查询条件)
}
